// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> create dropdown component 1`] = `
<div
  className="fd-dropdown"
>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <button
          aria-controls="fd-default-dropdown-popover"
          aria-expanded={false}
          aria-haspopup={true}
          className="fd-button fd-dropdown__control"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          Select
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> create dropdown component 2`] = `
<div
  className="fd-dropdown blue"
>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <button
          aria-controls="fd-compact-dropdown-popover"
          aria-expanded={false}
          aria-haspopup={true}
          className="fd-button fd-button--compact fd-dropdown__control"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          Select
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> create dropdown component 3`] = `
<div
  className="fd-dropdown fd-dropdown--standard"
>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <button
          aria-controls="fd-toolbar-dropdown-popover"
          aria-expanded={false}
          aria-haspopup={true}
          className="fd-button fd-dropdown__control"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          Select
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> create dropdown component 4`] = `
<div
  className="fd-dropdown"
>
  <div
    className="fd-popover"
    id="jhqD0557"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <button
          aria-controls="fd-icon-dropdown-popover"
          aria-expanded={false}
          aria-haspopup={true}
          className="fd-button sap-icon--filter fd-dropdown__control"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          Select
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> create dropdown component 5`] = `
<div
  className="fd-dropdown"
>
  <div
    className="fd-popover"
    id="jhqD0561"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <button
          aria-controls="fd-disable-dropdown-popover"
          aria-expanded={false}
          aria-haspopup={true}
          className="fd-button sap-icon--filter is-disabled fd-dropdown__control"
          disabled={true}
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          Select
        </button>
      </div>
    </div>
  </div>
</div>
`;
